--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/toggle-button/toggle-button.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/toggle-button/toggle-button.component.html
@@ -2,12 +2,12 @@
   <div class="setting-wrapper">
     <label style="margin-right:20px"> {{ ToggleText }}
     </label>
-    <div class="setting-control-container">
+    <div class="setting-control-container" [class.toggle-disabled]="isDisabled">
       <div role="radiogroup" class="medium" aria-disabled="false">
-        <div role="radio" [tabindex]="0" (keydown.ArrowLeft)="update(!selected)" (keydown.ArrowRight)="update(!selected)" (click)="update(false)" attr.aria-checked="{{!selected ? 'true': 'false'}}" aria-labelledby="Off">
+        <div role="radio" [class.toggle-disabled]="isDisabled" [tabindex]="0" (keydown.ArrowLeft)="update(!selected)" (keydown.ArrowRight)="update(!selected)" (click)="update(false)" attr.aria-checked="{{!selected ? 'true': 'false'}}" aria-labelledby="Off">
           Off
         </div>
-        <div role="radio" [tabindex]="0" (keydown.ArrowLeft)="update(!selected)" (keydown.ArrowRight)="update(!selected)" (click)="update(true)" attr.aria-checked="{{selected ? 'true': 'false'}}" aria-labelledby="On">
+        <div role="radio" [class.toggle-disabled]="isDisabled" [tabindex]="0" (keydown.ArrowLeft)="update(!selected)" (keydown.ArrowRight)="update(!selected)" (click)="update(true)" attr.aria-checked="{{selected ? 'true': 'false'}}" aria-labelledby="On">
           On
         </div>
       </div>
