Wrap word formatting for resource name (#376)
* wrap word formatting for resource name

* Truncate resource name if it is too long

* Change formatting function to use pipe

* Fix typo

--- a/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
         <img [src]="resourceService.imgSrc" class="resource-logo" style="max-width:25px">
       </div>
       <div class="info" (click)="navigateTo('home/category')">
-        <p>{{resourceService.getResourceName()}}</p>
+        <p>{{resourceService.getResourceName() | formatResourceName}}</p>
       </div>
       <div class='resource-summary' (click)="openResourceInfoModal()">
         <i class="fa fa-info-circle" aria-hidden="true"></i>
