--- a/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.scss
@@ -85,6 +85,8 @@ side-nav {
     padding: 2px 5px 5px 15px;
     display: inline-block;
     max-width: 180px;
+    word-wrap: break-word;
+    top: 9px;
 }
 
 .user-panel {
