Add individual feedback UI for change analysis (#379)
* Add individual change feedback control for Application Changes

* Get the row value by column name instead of index

* Update the description of the feedback control

* Resolve comments

--- a/AngularApp/projects/diagnostic-data/src/lib/components/changesets-view/changesets-view.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/changesets-view/changesets-view.component.html
@@ -29,7 +29,7 @@
               {{changesTableError}}
             </div>
             <div style="margin:10px" *ngIf="changesDataSet && !loadingChangesTable">
-                <changes-view  [changesDataSet]="changesDataSet" [initiatedBy]="initiatedBy"></changes-view>
+                <changes-view [detectorEventProperties]="detectorEventProperties" [changesetId]="selectedChangeSetId" [changesDataSet]="changesDataSet" [initiatedBy]="initiatedBy"></changes-view>
             </div>
         </div>
 
