--- a/AngularApp/projects/diagnostic-data/src/lib/components/changes-view/changes-view.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/changes-view/changes-view.component.html
@@ -1,3 +1,4 @@
+
 <div class="row table-top" *ngIf="tableItems.length > 0">
   <div class="col-sm-4">
       <div class="search-container">
@@ -63,9 +64,13 @@
   <!-- Initiated By Column -->
   <ng-container matColumnDef="initiatedBy">
       <th mat-header-cell *matHeaderCellDef> Initiated By </th>
-      <td mat-cell *matCellDef="let element"> {{element.initiatedBy}} </td>
+      <td mat-cell *matCellDef="let element">
+          <ul *ngIf="element.initiatedByList.length > 1; else singleUser">
+            <li *ngFor="let user of element.initiatedByList"> {{user}}</li>
+          </ul>
+          <ng-template #singleUser>{{element.initiatedByList[0]}}</ng-template>
+      </td>
     </ng-container>
-
 
   <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
   <ng-container matColumnDef="expandedDetail">
