--- a/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-data-sources/tab-data-sources.component.scss
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/tabs/tab-data-sources/tab-data-sources.component.scss
@@ -3,3 +3,11 @@
     font-size: smaller;
     text-decoration-line: underline;
 }
+
+.operationName {
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    background-color: #3c8dbc;
+    color: whitesmoke;
+    padding-left: 10px;
+}
