--- a/AngularApp/projects/applens/src/app/modules/site/site-finder/site-finder.component.html
+++ b/AngularApp/projects/applens/src/app/modules/site/site-finder/site-finder.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid main-container">
   <div class="big-text" *ngIf="loading">Searching for site ...</div>
-  <div class="big-text" *ngIf="!loading && error">Site {{site}} not found</div>
+  <div class="big-text" *ngIf="!loading && error">{{error}}</div>
   <div class="big-text" *ngIf="!loading && !error && matchingSites.length == 1">Redirecting to {{site}}</div>
   <div *ngIf="!loading && !error && matchingSites.length > 0">
     <div class="multiple-sites">
