--- a/AngularApp/projects/diagnostic-data/src/lib/components/markdown-view/markdown-view.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/markdown-view/markdown-view.component.html
@@ -11,7 +11,7 @@
 </ng-template>
 
 <data-container *ngIf="renderingProperties.isContainerNeeded else noContainerMarkdown" [headerTemplate]="header" [title]="renderingProperties.title">
-    <markdown [data]="markdown"></markdown>
+    <markdown #markdownDiv [data]="markdownData"></markdown>
 </data-container>
 
 <!-- If there is no title, do not use container. Note this is called from the else statement in the *ngIf above -->
@@ -19,6 +19,6 @@
     <div *ngIf="renderingProperties.title">
         <h1>{{renderingProperties.title}}</h1>
     </div>
-    <markdown [data]="markdown"></markdown>
+    <markdown #markdownDiv [data]="markdownData"></markdown>
 </ng-template>
   
