--- a/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
           alt="User Profile Photo" (click)="navigateToUserPage()" />
         <ngx-avatar *ngIf="displayName != undefined && displayName !== '' && userPhotoSource === ''" class="avatar avatar-initial"
           [round]="false" [name]=displayName initialsSize="2" (click)="navigateToUserPage()"></ngx-avatar>
-        <div *ngIf="userPhotoSource == undefined && environment.adal.enabled" class="loading-element">
+        <div *ngIf="userPhotoSource == undefined" class="loading-element">
           <span class="fa-li fa fa-spinner fa-spin fa-2x photo-loading"></span>
         </div>
       </li>
