Add new component

--- a/AngularApp/projects/applens/src/app/modules/dashboard/resource-home/resource-home.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/resource-home/resource-home.component.html
@@ -1,3 +1,17 @@
+<highcharts-chart
+  [Highcharts]="Highcharts"
+
+  [constructorType]="chartConstructor"
+  [options]="chartOptions"
+  [callbackFunction]="chartCallback"
+
+  [(update)]="updateFlag"
+  [oneToOne]="oneToOneFlag"
+  [runOutsideAngular]="runOutsideAngularFlag"
+
+  style="width: 100%; height: 400px; display: block;"
+></highcharts-chart>
+
 <div class="search-box-container" *ngIf="_searchService.searchIsEnabled">
   <div class="search-box">
     <i class="fa fa-search search-icon"></i>
