--- a/AngularApp/projects/applens/src/app/modules/dashboard/resource-home/resource-home.component.html
+++ b/AngularApp/projects/applens/src/app/modules/dashboard/resource-home/resource-home.component.html
@@ -1,3 +1,82 @@
+<!-- <div class="full-left">
+  <h2>Demo #1: Highcharts with a basic editor</h2>
+  <div class="third-left">
+    <button (click)="updateInputChart()">Update chart</button>
+    <br/>
+    <textarea rows="16" cols="50"
+      [(ngModel)]="optFromInputString"
+    ></textarea>
+    <br/>
+    <button (click)="toggleSeriesType()">1st series type toggle</button>
+  </div>
+  <div class="medium-right">
+    <highcharts-chart
+      [Highcharts]="Highcharts"
+      [options]="optFromInput"
+      [(update)]="updateFromInput"
+      [oneToOne]=true
+      (chartInstance)="logChartInstance($event)"
+
+      style="width: 100%; height: 350px; display: block;"
+    ></highcharts-chart>
+  </div>
+</div> -->
+
+<br/>
+
+<div class="full-left">
+  <h2>Demo #2: Highstock with simple updates</h2>
+  <div class="third-left">
+    <p>Chart title text: </p>
+    <input
+      [(ngModel)]="charts[usedIndex].hcOptions.title.text"
+      (ngModelChange)="titleChange($event)"
+    >
+    <br/>
+    <p>Data sets:</p>
+    <button *ngFor="let i of [0,1,2]"
+      (click)="usedIndex = i">
+      {{i+1}}
+    </button>
+  </div>
+  <div class="medium-right">
+    <highcharts-chart
+      [Highcharts]="Highcharts"
+      [constructorType]="'stockChart'"
+      [options]="charts[usedIndex].hcOptions"
+      [callbackFunction]="charts[0].hcCallback"
+      [(update)]="updateDemo2"
+
+      style="width: 100%; height: 350px; display: block;"
+    ></highcharts-chart>
+  </div>
+</div>
+
+<br/>
+<!--
+<div class="full-left">
+  <h2>Demo #3: Highmaps map chart</h2>
+  <highcharts-chart
+    [Highcharts]="Highcharts"
+    [constructorType]="'mapChart'"
+    [options]="chartMap"
+
+    style="width: 100%; height: 650px; display: block;"
+  ></highcharts-chart>
+</div>
+
+<br/>
+
+<div class="full-left">
+  <h2>Demo #4: Highcharts Gantt chart</h2>
+  <highcharts-chart
+    [Highcharts]="Highcharts"
+    [constructorType]="'ganttChart'"
+    [options]="chartGantt"
+
+    style="width: 100%; height: 350px; display: block;"
+  ></highcharts-chart>
+</div>
 <highcharts-chart
   [Highcharts]="Highcharts"
 
@@ -10,7 +89,7 @@
   [runOutsideAngular]="runOutsideAngularFlag"
 
   style="width: 100%; height: 400px; display: block;"
-></highcharts-chart>
+></highcharts-chart> -->
 
 <div class="search-box-container" *ngIf="_searchService.searchIsEnabled">
   <div class="search-box">
