--- a/AngularApp/projects/diagnostic-data/src/lib/components/time-series-graph/time-series-graph.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/time-series-graph/time-series-graph.component.html
@@ -1,6 +1,10 @@
 <ng-template #graphView>
   <nvd3-graph [chartData]="selectedSeries" [chartType]="renderingProperties.graphType" [chartOptions]="graphOptions"
     *ngIf="selectedSeries" [startTime]="startTime" [endTime]="endTime"></nvd3-graph>
+    <highcharts-graph
+    [HighchartData]="selectedHighChartSeries"
+    style="width: 100%; height: 350px; display: block;"
+  ></highcharts-graph >
   <div *ngIf="!selectedSeries">Loading Data...</div>
 </ng-template>
 
