--- a/AngularApp/projects/diagnostic-data/src/lib/components/highcharts-graph/highcharts-graph.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/highcharts-graph/highcharts-graph.component.html
@@ -2,5 +2,8 @@
   [Highcharts]="Highcharts"
   [options]="chartOptions"
 
-  style="width: 100%; height: 400px; display: block;"
+  style="width: 100%; height: 200px; display: block;"
 ></highcharts-chart>
+<div *ngIf="!HighchartData || loading" style="height:200px">
+  <i class="fa fa-circle-o-notch fa-spin"></i>
+</div>
