--- a/AngularApp/projects/diagnostic-data/src/lib/components/highcharts-graph/highcharts-graph.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/highcharts-graph/highcharts-graph.component.html
@@ -1,9 +1,5 @@
-<highcharts-chart
-  [Highcharts]="Highcharts"
-  [options]="chartOptions"
-
-  style="width: 100%; height: 200px; display: block;"
-></highcharts-chart>
+<highcharts-chart [Highcharts]="Highcharts" [options]="chartOptions" style="width:100%; height: 200px; display: block;">
+</highcharts-chart>
 <div *ngIf="!HighchartData || loading" style="height:200px">
   <i class="fa fa-circle-o-notch fa-spin"></i>
 </div>
