--- a/AngularApp/projects/diagnostic-data/src/lib/components/time-series-graph/time-series-graph.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/time-series-graph/time-series-graph.component.html
@@ -5,7 +5,7 @@
 </ng-template>
 
 <ng-template #graphView1>
-<highcharts-graph [HighchartData]="selectedHighChartSeries"></highcharts-graph >
+<highcharts-graph [HighchartData]="selectedHighChartSeries"[chartType]="renderingProperties.graphType" [chartOptions]="graphOptions"></highcharts-graph >
   <div *ngIf="!selectedSeries">Loading Data...</div>
 </ng-template>
 
