Enabling search in case submission flow (#494)
* Working commit - first version

* Configurations for support topics

* Dynamic tab title

* Search bar, conditional rendering, support doc

* UI changes and doc rendering

* ProductId check

* PesId configuration

* Changes to support topic service

* Sanity check on info parameters

* Styling on search box

* Logging, styling, doc clean changes

* Code cleanup

* Code cleanup

* Resolve build issue

* Comaprison with ===

* Comaprison with ===

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.html
@@ -1,4 +1,12 @@
-<detector-container [detector]="analysisDetector" [isAnalysisView]="true"></detector-container>
+<detector-container *ngIf="!showSearchBar" [detector]="analysisDetector" [isAnalysisView]="true"></detector-container>
+<div *ngIf="showSearchBar" class="search-box">
+    <span>Diagnostics based on </span>
+    <div class="search-input-box">
+      <input id="caseSubmissionFlowSearchBar" placeholder="Describe your problem and hit enter" (click)="focusSearch()" class="search-input" [(ngModel)]="searchTerm" (keyup.enter)="triggerSearch()" [style.backgroundColor]="searchBarFocus? 'transparent': ''">
+      <i class="fa fa-search search-icon" (click)="focusSearch()"></i>
+      <i class="fa fa-exclamation icon-err" [style.display]="searchTerm?.trim().length>0 && searchTerm?.trim().length<2? '': 'none'" title="At least 2 characters"></i>
+    </div>
+</div>
 <detector-list-analysis withinDiagnoseAndSolve="true" detectorParmName="detectorName"></detector-list-analysis>
 
 <div [hidden]="detectorId === ''">
