--- a/AngularApp/projects/diagnostic-data/src/lib/components/time-series-graph/time-series-graph.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/time-series-graph/time-series-graph.component.html
@@ -4,7 +4,7 @@
   <div *ngIf="!selectedSeries">Loading Data...</div>
 </ng-template>
 
-<ng-template #graphView1>
+<ng-template #highchartGraphView>
 <highcharts-graph [HighchartData]="selectedHighChartSeries"[chartType]="renderingProperties.graphType" [chartOptions]="graphOptions"></highcharts-graph >
   <div *ngIf="!selectedSeries">Loading Data...</div>
 </ng-template>
@@ -20,7 +20,7 @@
 <div *ngIf="useHighchart">
 <data-container *ngIf="renderingProperties.title; else noContainer1" [title]="renderingProperties.title"
     [description]="renderingProperties.description">
-  <ng-container *ngTemplateOutlet="graphView1"></ng-container>
+  <ng-container *ngTemplateOutlet="highchartGraphView"></ng-container>
 </data-container>
 </div>
 
@@ -29,5 +29,5 @@
 </ng-template>
 
 <ng-template #noContainer1>
-  <ng-container *ngTemplateOutlet="graphView1"></ng-container>
+  <ng-container *ngTemplateOutlet="highchartGraphView"></ng-container>
 </ng-template>
