--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-control/detector-control.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-control/detector-control.component.html
@@ -5,12 +5,12 @@
       <div class="control">
         <input class="date-input" [(ngModel)]="startTime" (keyup.enter)="setManualDate()"/>
       </div>
-      
+
       <div class="control">
           <input class="date-input" [(ngModel)]="endTime" (keyup.enter)="setManualDate()"/>
       </div>
     </div> -->
-    
+
     <div class="control-group" *ngIf="detectorControlService.duration">
       <div (keyup.enter) = "detectorControlService.moveBackwardDuration()" (click)="detectorControlService.moveBackwardDuration()" attr.name = "Last {{detectorControlService.duration.displayName}}" attr.value = "Last {{detectorControlService.duration.displayName}}" attr.aria-label = "Move time duration back by {{detectorControlService.duration.ariaLabel}}" tabindex="0" role= "button" class="control">
         <i class="fa fa-chevron-left"></i>
@@ -52,6 +52,9 @@
     <div class="control-group">
       <div class="control"  (keyup.enter) = "detectorControlService.refresh()" (click)="detectorControlService.refresh()" name = "Refresh" value = "Refresh" aria-label = "Refresh" tabindex="0" role = "button">
         <i class="fa fa-refresh"></i>
+      </div>
+      <div class="control" [ngStyle]="{'background-color':detectorControlService.synchronizingZoom ? '#bdbdd7': 'white'}" (keyup.enter) = "detectorControlService.toggleSynchronization()" (click)="detectorControlService.toggleSynchronization()" name = "ToggleSynchronization" value = "ToggleSynchronization" aria-label = "ToggleSynchronization" tabindex="0" role = "button">
+        <i class="fa fa-magnet"></i>
       </div>
     </div>
   </div>
