--- a/AngularApp/projects/diagnostic-data/src/lib/components/time-series-graph/time-series-graph.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/time-series-graph/time-series-graph.component.html
@@ -5,7 +5,7 @@
 </ng-template>
 
 <ng-template #highchartGraphView>
-<highcharts-graph [HighchartData]="selectedHighChartSeries"[chartType]="renderingProperties.graphType" [chartOptions]="graphOptions"></highcharts-graph >
+<highcharts-graph [HighchartData]="selectedHighChartSeries"[chartType]="renderingProperties.graphType" [chartOptions]="graphOptions" [synchronizingZoom]="synchronizingZoom"></highcharts-graph >
   <div *ngIf="!selectedSeries">Loading Data...</div>
 </ng-template>
 
@@ -18,7 +18,7 @@
 </div>
 
 <div *ngIf="useHighchart">
-<data-container *ngIf="renderingProperties.title; else noContainer1" [title]="renderingProperties.title"
+<data-container *ngIf="renderingProperties.title; else noContainerHighChart" [title]="renderingProperties.title"
     [description]="renderingProperties.description">
   <ng-container *ngTemplateOutlet="highchartGraphView"></ng-container>
 </data-container>
@@ -28,6 +28,6 @@
   <ng-container *ngTemplateOutlet="graphView"></ng-container>
 </ng-template>
 
-<ng-template #noContainer1>
+<ng-template #noContainerHighChart>
   <ng-container *ngTemplateOutlet="highchartGraphView"></ng-container>
 </ng-template>
