--- a/AngularApp/projects/diagnostic-data/src/lib/components/highcharts-graph/highcharts-graph.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/highcharts-graph/highcharts-graph.component.scss
@@ -7,11 +7,11 @@
 // }
 
 .highcharts-menu hr {
-    margin-top: 3px!important ;
-    margin-bottom: 3px!important;
+    margin-top: 0px!important ;
+    margin-bottom: 0px!important;
 }
 
-// hr {
-//     margin-top: 3px!important ;
-//     margin-bottom: 3px!important;
-// }
+hr {
+    margin-top: 0px!important ;
+    margin-bottom: 0px!important;
+}
