--- a/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
+++ b/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
@@ -1,3 +1,13 @@
+<div>
+  <!-- <fab-button label="Fabric [React] Button" (onClick)="toggleDialog()"></fab-button> -->
+  <fab-dialog [hidden]="dialogHidden" (onDismiss)="toggleDialog()" key="d2" title="Fabric [React] Dialog" subText="Use Fabric React components inside Applens" [type]="DialogType.largeHeader">
+    Click Count: {{ counter }}
+    <fab-dialog-footer>
+      <fab-button (onClick)="incrementCounter()" label='Save' style="margin-right:10px;"></fab-button>
+      <fab-button (onClick)="toggleDialog()" label='Cancel'></fab-button>
+    </fab-dialog-footer>
+  </fab-dialog>
+</div>
 <div class="container-fluid main-container">
   <div class="row main-row">
     <div class="col-md-6 col-md-offset-3">
@@ -49,10 +59,11 @@
             </div>
           </div>
           <div class="form-group go-form">
-            <button class="btn btn-primary go-button" 
+            <!-- <button class="btn btn-primary go-button" 
                 [disabled]="!(resourceName && resourceName.length > 0)" type="Submit">
               Go
-            </button>
+            </button> -->
+            <fab-button (onClick)="toggleDialog()" label='Go'>Fab-Button</fab-button>
           </div>
         </form>
         <div class = "error-msg-container">
