External ui test

--- a/AngularApp/projects/applens/src/app/app.component.html
+++ b/AngularApp/projects/applens/src/app/app.component.html
@@ -1,10 +1,11 @@
 
 
-    <!-- <p>
+     <p>
         Using Angular react renderer to render fabric UI here
       </p>
-      
-      <div>
+
+
+      <!-- <div>
         <fab-button label="Fabric [React] Button" (onClick)="toggleDialog()"></fab-button>
         <fab-dialog [hidden]="dialogHidden" (onDismiss)="toggleDialog()" key="d2" title="Fabric [React] Dialog" subText="Use Fabric React components inside your Angular app!" [type]="DialogType.largeHeader">
           Hello world! {{ counter }}
