--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
@@ -1,27 +1,46 @@
 <div class="home-container">
   <div class="input-group input-group-lg search-input-group" (keyup.escape)="clearSearch()" role="search">
-    <input tabindex="0" type="search" class="form-control" placeholder="{{searchPlaceHolder}}"
-      [ngModel]="searchValue" (ngModelChange)="updateSearchValue($event)" (focus)="onSearchBoxFocus(event)"
-      (focusout)="onSearchLostFocus()" aria-controls="search-results">
+    <input tabindex="0" type="search" class="form-control" placeholder="{{searchPlaceHolder}}" [ngModel]="searchValue"
+      (ngModelChange)="updateSearchValue($event)" (focus)="onSearchBoxFocus(event)" (focusout)="onSearchLostFocus()"
+      aria-controls="search-results">
     <div class="input-group-btn" id="clear-search">
       <button class="btn btn-default" type="button" aria-label="Clear" title="Clear" tabindex="0"
         (click)="clearSearch()" (focus)="onFocusClear()">
         <i class="fa fa-close"></i>
       </button>
     </div>
+    <div>
+    <fab-dialog [hidden]="dialogHidden" (onDismiss)="onFocusClear()" key="d2" title="Fabric [React] Dialog" subText="Use Fabric React components inside Applens" [type]="DialogType.largeHeader">
+      Click Count:
+      <fab-dialog-footer>
+        <fab-button (onClick)="onFocusClear()" label='Save' style="margin-right:10px;"></fab-button>
+        <fab-button (onClick)="onFocusClear()" label='Cancel'></fab-button>
+      </fab-dialog-footer>
+    </fab-dialog>
   </div>
+  </div>
+  <div>
+      <fab-dialog-footer>
+        <fab-button (onClick)="clearSearch()" label='Clear' style="margin-right:10px;">hahah</fab-button>
+      </fab-dialog-footer>
+    </div>
   <div role="status">
     <p *ngIf="inputAriaLabel">{{inputAriaLabel}}</p>
   </div>
   <div id="search-results" role="region" aria-live="polite">
     <ng-container *ngIf="searchBoxFocus">
-      <search-results [searchValue]="searchValue" (resultCount)="onResultCount($event)"
-        (keyup.escape)="clearSearch()"></search-results>
+      <search-results [searchValue]="searchValue" (resultCount)="onResultCount($event)" (keyup.escape)="clearSearch()">
+      </search-results>
     </ng-container>
   </div>
   <div class="main-area">
     <h2 tabindex="0">{{homePageText.title}}</h2>
     <p id="page-description" tabindex="0">{{homePageText.description}}</p>
+    <div>
+        <fab-dialog-footer>
+          <fab-button (onClick)="clearSearch()" label='Clear' style="width:10px; height: 10px; color: black">hahah</fab-button>
+        </fab-dialog-footer>
+      </div>
     <div *ngIf="categories" class="category-container">
       <div *ngFor="let category of categories" style="display: inline-block;padding: 20px 40px 20px 0px">
         <category-tile [category]="category"></category-tile>
