--- a/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
+++ b/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
@@ -1,10 +1,11 @@
 <div>
   <!-- <fab-button label="Fabric [React] Button" (onClick)="toggleDialog()"></fab-button> -->
-  <fab-dialog [hidden]="dialogHidden" (onDismiss)="toggleDialog()" key="d2" title="Fabric [React] Dialog" subText="Use Fabric React components inside Applens" [type]="DialogType.largeHeader">
+  <!-- [type]="DialogType.largeHeader" -->
+  <fab-dialog [hidden]="dialogHidden" (onDismiss)="toggleDialog()" key="d2" title="Fabric [React] Dialog" subText="Use Fabric React components inside Applens">
     Click Count: {{ counter }}
     <fab-dialog-footer>
-      <fab-button (onClick)="incrementCounter()" label='Save' style="margin-right:10px;"></fab-button>
-      <fab-button (onClick)="toggleDialog()" label='Cancel'></fab-button>
+      <fab-primary-button (onClick)="incrementCounter()" text='Save' style="margin-right:10px;">Save</fab-primary-button>
+      <fab-default-button (onClick)="toggleDialog()" text='Cancel'></fab-default-button>
     </fab-dialog-footer>
   </fab-dialog>
 </div>
@@ -63,7 +64,7 @@
                 [disabled]="!(resourceName && resourceName.length > 0)" type="Submit">
               Go
             </button> -->
-            <fab-button (onClick)="toggleDialog()" label='Go'>Fab-Button</fab-button>
+            <fab-default-button (onClick)="toggleDialog()" text='Go'>Go</fab-default-button>
           </div>
         </form>
         <div class = "error-msg-container">
