Remove unused component

--- a/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
+++ b/AngularApp/projects/applens/src/app/modules/main/main/main.component.html
@@ -60,11 +60,10 @@
             </div>
           </div>
           <div class="form-group go-form">
-            <!-- <button class="btn btn-primary go-button"
-                [disabled]="!(resourceName && resourceName.length > 0)" type="Submit">
-              Go
-            </button> -->
-            <fab-primary-button (onClick)="toggleDialog()" text='Go'></fab-primary-button>
+            <fab-primary-button 
+                [disabled]="!(resourceName && resourceName.length > 0)" type="Submit" text='Go'>
+            </fab-primary-button>
+            <!-- <fab-primary-button (onClick)="toggleDialog()" text='Go'></fab-primary-button> -->
           </div>
         </form>
         <div class = "error-msg-container">
