--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-chat/category-chat.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-chat/category-chat.component.html
@@ -1,3 +1,5 @@
+<fab-default-button text='Cancel'></fab-default-button>
+<fab-nav [groups]="groups"></fab-nav>
 <div class="chat-container">
     <div>
         <support-bot [startingKey]="startingKey"></support-bot>
