--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tabs/tabs.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tabs/tabs.component.html
@@ -1,5 +1,5 @@
 <div class="panel with-nav-tabs panel-default app-container">
-  <div class="panel-heading app-nav-bar">
+  <!-- <div class="panel-heading app-nav-bar">
     <ul class="nav nav-tabs">
 
       <li role="tab" class="app-nav-tab" *ngFor="let tab of navigationItems; let i = index"
@@ -11,7 +11,7 @@
       </li>
 
     </ul>
-  </div>
+  </div> -->
 
   <div id="app-content" class="panel-body">
     <notification></notification>
