--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-chat/category-chat.component.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/category-chat/category-chat.component.scss
@@ -1,11 +1,20 @@
-.chat-container {
-    /* padding: 0px 10%; */
-    margin: 0px -10px;
-    background-color: #f3f3f3;
-}
+// .chat-container {
+//     /* padding: 0px 10%; */
+//     margin: 0px -10px;
+//     background-color: #f3f3f3;
+// }
 
 .App {
     min-height: 100vh; 
+  }
+
+  .body {
+      display: flex!important;
+      flex-direction: row;
+    }
+
+  .sidebar .content{
+    padding: 0px;
   }
   /*
   To use Flexbox we need to set the display
@@ -15,19 +24,19 @@
   them by row, but we can also tell it to do
   it by column.
   */
-  .App {
-    display: flex;
-    flex-direction: column;
-  }
+  // .App {
+  //   display: flex!important;
+  //   flex-direction: column;
+  // }
   /*
   Something similar is done to the body 
   element, except we order the wrapped 
   component as rows.
   */
-  .App .body {
-    display: flex;
-    flex-direction: row;
-  }
+  // .App .body {
+  //   display: flex!important;
+  //   flex-direction: row;
+  // }
   /*
   Flexbox let's us reorder the way the 
   elements are placed inside the wrapper
@@ -37,13 +46,18 @@
   and set its flex propertires so it doesn't
   grow or shrink with the rest of the page.
   */
-  .body .sidebar {
-    order: -1;
-    max-width: 12em;
-    flex-grow: 0;    /* Defined the ability to groe */
-    flex-shrink: 0;  /* Defines the ability to shrink */
-    flex-basis: 12em;/* Default value of the element before distribuing the remaing space */
-  }
+
+  // .body .content {
+  //   display: flex!important;
+  // }
+  // .body .sidebar {
+  //   display: flex!important;
+  //   order: -1;
+  //   max-width: 12em;
+  //   flex-grow: 0;    /* Defined the ability to grow */
+  //   flex-shrink: 0;  /* Defines the ability to shrink */
+  //   flex-basis: 12em;/* Default value of the element before distribuing the remaing space */
+  // }
   /*
   Lastly we give some custom height to our 
   header and footer components.
