--- a/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/home/components/home/home.component.html
@@ -22,11 +22,54 @@
   <div class="main-area">
     <h2 tabindex="0">{{homePageText.title}}</h2>
     <p id="page-description" tabindex="0">{{homePageText.description}}</p>
-    <div *ngIf="categories" class="category-container">
+    <div *ngIf="categories && cloudLocation != 'portal.azure.cn'" class="category-container">
       <div *ngFor="let category of categories" style="display: inline-block;padding: 20px 40px 20px 0px">
         <category-tile [category]="category"></category-tile>
       </div>
     </div>
+    <markdown ngPreserveWhitespaces *ngIf="cloudLocation == 'portal.azure.cn'">
+      ## Management
+      Cannot stop, start, or edit my Kubernetes containers
+
+      
+      - https://docs.azure.cn/aks/troubleshooting
+      - https://docs.azure.cn/aks/kubernetes-dashboard
+      - https://docs.azure.cn/aks/scale-cluster
+      - https://docs.azure.cn/aks/upgrade-cluster
+      - https://docs.azure.cn/aks/configure-azure-cni
+      - https://docs.azure.cn/aks/kube-advisor-tool
+      - https://stackoverflow.com/questions/tagged/azure-container-service
+      
+      ## Configuration and setup issues
+      Cannot create Azure Kubernetes service container cluster
+      
+      - https://docs.microsoft.com/azure/aks/create-cluster
+      - https://docs.azure.cn/aks/scale-cluster
+      - https://docs.azure.cn/aks/upgrade-cluster
+      - https://docs.azure.cn/aks/azure-disks-dynamic-pv
+      - https://docs.azure.cn/aks/ssh
+      - https://docs.azure.cn/aks/concepts-identity
+      - https://docs.azure.cn/aks/troubleshooting
+      - https://docs.azure.cn/aks/kube-advisor-tool
+      - https://docs.azure.cn/aks/kubernetes-dashboard
+      - https://stackoverflow.com/questions/tagged/azure-container-service
+      
+      ## Connectivity
+      Cannot connect to my Azure Kubernetes service container
+      - https://docs.azure.cn/aks/ssh
+      - https://docs.azure.cn/aks/Kubernetes-dashboard
+      - https://docs.azure.cn/aks/configure-azure-cni
+      - https://stackoverflow.com/questions/49560394/new-aks-cluster-unreachable-via-network-including-dashboard
+      - https://stackoverflow.com/questions/51531561/kubernetes-aks-unable-to-view-the-site
+      - https://docs.azure.cn/aks/troubleshooting
+      - https://docs.azure.cn/aks/kube-advisor-tool
+      - https://stackoverflow.com/questions/tagged/azure-container-service
+      
+      ## Connectivity
+      Certificate Management issue (SSH key)
+      
+      - https://docs.azure.cn/aks/ssh
+    </markdown>
     <div class="privacy-statement" tabindex="0">
       <a href="https://azure.microsoft.com/en-us/support/legal/?amp%3Bclcid=0x9" target="_blank">Privacy</a>
     </div>
